
[TestModal_Inspect/workspace - 1]
TestModal_Inspect/workspace
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "my-workspace",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.InfoMenuView",
      "Data": {
        "Type": "InfoMenuView",
        "Handle": "my-workspace",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestModal_Inspect/single_repo - 1]
TestModal_Inspect/single_repo
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "single-repo",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.InfoMenuView",
      "Data": {
        "Type": "InfoMenuView",
        "Handle": "single-repo",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestModal_Inspect/no_repos - 1]
TestModal_Inspect/no_repos
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "no-repos",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.InfoMenuView",
      "Data": {
        "Type": "InfoMenuView",
        "Handle": "no-repos",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestModal_Inspect/dismiss_esc - 1]
TestModal_Inspect/dismiss_esc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    }
  ]
}
---
